upload 2 more videos

--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -154,6 +154,7 @@ talks:
   dur: 00:40
 
 
+  youtube_url: https://www.youtube.com/watch?v=PA9Rg-v3W5w
 - bio: |-
     My real name is Chanapai Chuadchum my nick name is Korn i was started my work on roobtics since i was 10 on the
     and i got the thrid place on the competition in Solar innovative contest when i was 11 years old since then i'm
@@ -413,6 +414,7 @@ talks:
   dur: 00:40
 
 
+  youtube_url: https://www.youtube.com/watch?v=qxBWBeDnLt8
 - bio: |-
     I established my company called moegi Co., Ltd. to start the drone business.
     I am an engineer of the front-end system, but recently I have been focued on RaspberryPi and Arduino, and have been actively transmitting mechanisms in which objects move in reality by using Python language.
