--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -216,6 +216,7 @@ talks:
   time: 13:15
   dur: 00:40
 
+  youtube_url: https://www.youtube.com/watch?v=G_sit_z5Uy4
 - bio: |-
     Hello, I am Doni Rubiagatra. I am Software Engineer at `kumparan <https://kumparan.com>`_, co-founder of
     `surabaya.py <https://github.com/surabaya-py, and Advisor  at
@@ -776,6 +777,7 @@ talks:
   time: 14:30
   dur: 00:40
 
+  youtube_url: https://www.youtube.com/watch?v=rDR0egRhJ1Y
 - bio: |-
     A passionate software developer, Sarthak is a core contributor in Expedia's Mobile Team. He weaves the magic in his
     code with Python, Java, Kotlin, Scala, C and  JavaScript. Having mastered these languages all by himself, through
