--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -636,6 +636,7 @@ talks:
   time: 10:40
   dur: 00:40
 
+  youtube_url: https://www.youtube.com/watch?v=yDalqI76vmU
 - bio: |-
     Pisuth turns himself into a blockchain developer with extensive skills on IoT and Chatbot since 2017. Prior
     that time, he was working in media industry for 8 years in Thailand experienced using Python on system monitoring
