update one more video

--- a/talks2019.yaml
+++ b/talks2019.yaml
@@ -461,6 +461,7 @@ talks:
   time: 14:55
   dur: 00:40
 
+  youtube_url: https://www.youtube.com/watch?v=oCTSnXj6V8E
 - bio: |-
     Mark has worked in IT for over 20 years in Europe and Southeast Asia. His experience spans IT operations, software engineering, data systems, product management and project management. He has worked in top multinationals, SMEs and start-ups.
   description: |-
